--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,18 +75,14 @@ body{
 }
 
 .bananbox{
-    color: var(--textcolor) ;
     padding: 2%;
     border: 2px solid white; 
     border-radius: 20px;
     box-shadow: 0px 0px 10px 5px #a350e7;
-    text-shadow: 0px 0px 50px #a350e7 ;
     width: 300px;
     font-size: 2em;
     text-align: center;
-    display:flex ; 
     margin: 2%;
-    flex-direction: column;
 
 
 }
@@ -101,23 +97,28 @@ body{
     align-items: center;
     
 }
-p1::before{
+.bananbox p{
+    padding: 0;
+    text-shadow: 0px 0px 50px #a350e7;
+    color: var(--textcolor);
+}
+.bananbox p::before{
     content:" - "   	
  }
-p1::first-letter{
+.bananbox p:first-letter{
     color:#a350e7 ; 
 }
 
-.bananbox p1:first-child{
+.bananbox p:first-child{
     text-shadow: 0px 0px 30px #8900fa;
 }
 
-.bananbox p1:last-child{
+.bananbox p:last-child{
     text-shadow: 0px 0px 30px #e1cbf3;
 
 }
 
- p1::after{
+.bananbox p::after{
     content: "  👈";
  }
 
@@ -130,13 +131,12 @@ p1::first-letter{
  }
  .button{
     background-color:#c642d8 ; 
-    font-size: 2em;
-    padding: 5%;
     border-radius: 30px;
-    text-shadow: 0px 0px 10px var(--textcolor);
     border: 2px solid var(--textcolor);
     box-shadow: 0px 0px 10px 0px var(--textcolor);
-    padding-bottom: 1%;
+    padding: 2%;
+    text-decoration: none;
+
     
 
 
@@ -161,7 +161,6 @@ p1::first-letter{
  }
 
 .button:hover{
-    color: var(--textcolor) ; 
     box-shadow: 0px 0px 20px 0px var(--textcolor);
 }
 
@@ -191,5 +190,21 @@ h1{
     text-shadow: 0px 0px 80px var(--textcolor);
 }
 
+.button p{
+    font-size: 2em;
+    color: var(--backgroundcolor) ; 
+}
 
+p{
+
+    margin: 0;
+}
+
+.button p::after{
+    content: "   " url("/IMG/arrow_back_24px.svg");
+}
+
+.button p:hover{
+    color:var(--textcolor); 
+}
 
