--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,7 +18,6 @@ body{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    font-family: 'Open Sans', sans-serif;
 }
 
 .index{
@@ -208,3 +207,126 @@ p{
     color:var(--textcolor); 
 }
 
+.bodyui{
+    padding: 0;
+    margin:0 ; 
+    width: 390px;
+    height: 780px;
+    background-color: var(--textcolor);
+    display:flex ; 
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.biospace{
+   text-align: center;
+}
+
+.followbutton p{
+    text-align: center;
+    background-color: black;
+    color:var(--textcolor) ; 
+    width: 330px ; 
+    padding:16px ; 
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border:4px solid black ; 
+
+}
+
+.messagebutton p{
+    text-align: center;
+        background-color: var(--textcolor);
+        color: black;
+        border: 4px solid black;
+        width: 330px;
+        padding: 16px;
+        border-radius: 10px;
+}
+
+.profilepicture img{
+    border-radius: 50%;
+    margin-top:50px ; 
+    width: 150px;
+}
+
+.biospace h2:last-child{
+    font-size: 15px;
+}
+
+.biospace h1:first-child {
+    font-size: 40px;
+    margin:0px ; 
+}
+
+.cardspace{ 
+   display:flex ; 
+   justify-content: space-between;
+
+}
+
+.imgcard img{
+    width: 175px;
+    height: 250px;
+    margin-top: 30px;
+}
+.imgcard{
+    width:185px ; 
+}
+.imgcard img:first-child{
+  margin-left: 5px;
+}
+
+a{
+    text-decoration: none;
+}
+
+.followbutton p:hover{
+    background-color: var(--textcolor);
+    color:black ; 
+    border:4px solid black;
+}
+.messagebutton p:hover{
+    background-color: black;
+    color:var(--textcolor); 
+    border:4px solid black ; 
+}
+
+.navbar{
+    width: 390px;
+    display:flex ; 
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.navbar a:not(.postbutton):hover{
+    box-shadow: 0px 0px 30px 0.05px #ff00d4;
+    background-color: #f8c0fa;
+}
+
+.navbar a:not(.postbutton){
+    border-radius: 50%;
+}
+
+.navbar .postbutton{
+    background:linear-gradient(rgb(255, 0, 221),orange) ;
+    border-radius: 30px; 
+    width: 80px;
+    height: 50px;
+    display:flex ; 
+    justify-content: center;
+    align-items: center;
+
+}
+
+.navbar .postbutton:hover{
+    background: linear-gradient(rgb(0, 81, 255), rgb(9, 255, 0));
+}
+
+.postbutton img{
+    height:30px; 
+    width: 30px;
+}
