--- a/CSS/style.css
+++ b/CSS/style.css
@@ -335,3 +335,34 @@ a{
     height:30px; 
     width: 30px;
 }
+.bodygrid{
+    height: 500px;
+    width: 350px;
+    padding: 0;
+    margin: 0;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  
+}
+.pagecontentgrid{
+    display: grid;
+    grid-template: 25% 25% 25% 25% / 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+
+.pagecontentgrid img{
+    width: 75px;
+    height: 75px;
+
+}
+
+.bodygrid h1{
+    color:var(--textcolor) ; 
+    font-size: 1em;
+    justify-self: flex-start;
+    margin:10px ; 
+}
